# biquery-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  TUTORIAL.md  debug_test.py  docker-compose.yml  pyproject.toml  server2.err  server3.err  srv.err
app/: main.py
app/ai/: filter_resolver.py  intent_extractor.py  keyword_classifier.py
app/api/: analyze.py  config.py  intents.py  query.py  webhook.py
app/core/: __init__.py  config.py  memory.py
app/database/: bp_client.py  client.py  migrate.py  schema_meta.py  sqlite_client.py
app/formatter/: response.py
app/intents/: loader.py
app/queries/bp_batam/: executive_summary.py  service.py
app/services/: __init__.py  analyze_service.py  bp_database_service.py  bp_formatter_service.py  database_service.py  formatter_service.py  insight_service.py  intent_service.py  reply_service.py
app/sql/: template_engine.py  validator.py
database/: intents.md
prompts/: intents.json  templates.json
scripts/: add_filter_mappings.py  check_fm.py  debug_kepatuhan.py  docker-init.sh  final_verify.py  generate_intents.py  ollama-entrypoint.sh  run.sh  start.sh  test_debug.py  test_deployed_api.py  test_deployed_sql.py  test_filters_comprehensive.py  test_memory.py  test_memory_local.py  test_memory_reset.py  test_needs_context.py  test_user_query.py  validate_intents.py
static/: app.css  app.js  index.html  intents.html  sekolah.html  sekolah.js
tests/: conftest.py  test_api.py  test_intent.py  test_validator.py
