[project]
name = "eduquery-ai"
version = "0.1.0"
description = "Sistem tanya-jawab database sekolah berbasis bahasa alami yang berjalan lokal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "oracledb>=2.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
